[package]
name = "batch-aint-one"
version = "0.7.0"
edition = "2021"
authors = ["Thom Wright <dev@thomwright.co.uk>"]
description = """
I got 99 problems, but a batch ain't one
"""
documentation = "https://docs.rs/batch-aint-one"
homepage = "https://github.com/ThomWright/batch-aint-one"
repository = "https://github.com/ThomWright/batch-aint-one"
readme = "README.md"
keywords = ["batching", "batch", "async", "concurrency"]
categories = ["concurrency"]
license = "MIT"

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1.33", features = [
  "sync",
  "time",
  "tracing",
  "rt",
  "macros",
] }
tracing = "0.1"

[dev-dependencies]
doc-comment = "0.3.3"
futures = "0.3.29"
tokio = { version = "1.28.1", features = ["rt", "macros", "test-util"] }
tokio-test = "0.4.3"
tracing-capture = "0.2.0-beta.1"
tracing-subscriber = "0.3.18"
