[package]
name = "batch-aint-one-prometheus"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Prometheus metrics for batch-aint-one"
documentation = "https://docs.rs/batch-aint-one-prometheus"
homepage = "https://github.com/ThomWright/batch-aint-one"
readme = "README.md"
keywords = ["batching", "batch", "prometheus", "metrics"]
categories = ["concurrency"]

[dependencies]
batch-aint-one = { version = "0.14.0", path = "../batch-aint-one" }
prometheus = "0.14"

[dev-dependencies]
doc-comment = "0.3.3"
tokio-test = "0.4.3"
