[package]
name = "batch-aint-one"
version = "0.10.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = """
I got 99 problems, but a batch ain't one
"""
documentation = "https://docs.rs/batch-aint-one"
homepage = "https://github.com/ThomWright/batch-aint-one"
readme = "../README.md"
keywords = ["batching", "batch", "async", "concurrency"]
categories = ["concurrency"]

[dependencies]
bon = "3.7.2"
futures = "0.3.29"
thiserror = "2"
tokio = { version = "1.33", features = [
  "sync",
  "time",
  "tracing",
  "rt",
  "macros",
] }
tracing = "0.1"

[dev-dependencies]
assert_matches = "1.5.0"
doc-comment = "0.3.3"
futures = "0.3.29"
rand = "0.9.2"
rstest = "0.26.1"
statrs = "0.18.0"
tokio = { version = "1.28.1", features = ["rt", "macros", "test-util"] }
tokio-test = "0.4.3"
tracing-capture = "0.2.0-beta.1"
tracing-subscriber = "0.3.18"
