[package]
name = "simulator"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
batch-aint-one = { path = "../batch-aint-one" }
statrs = "0.18.0"
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
# For future use
