[package]
name = "simulator"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
batch-aint-one = { path = "../batch-aint-one" }
bon = { workspace = true }
rand = { version = "0.9", features = ["std_rng"] }
rand_distr = "0.5.1"
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
